css grids starter

--- a/css/css-transform.html
+++ b/css/css-transform.html
@@ -82,7 +82,7 @@
         }
 
         .place4 img:hover {
-            transform: scale(0.8) skew(10deg, 10deg);
+            transform: skew(30deg, 20deg) scale(0.6);
         }
 
         .place4:hover .caption {
